--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "file-saver": "^2.0.2",
+    "jszip": "^3.2.2",
     "lint-staged": "^8.1.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
