--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "element-ui": "^2.11.1",
-    "screenfull": "^4.2.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuedraggable": "^2.19.2",
+    "jszip": "^3.2.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
