--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1",
     "vuedraggable": "^2.19.2",
+    "file-saver": "^2.0.2",
     "jszip": "^3.2.2"
   },
   "devDependencies": {
